Fixed scroll to panel visibility algorithm and made various CSS fixed to improved legibility

--- a/src/css/bioblitz.css
+++ b/src/css/bioblitz.css
@@ -1,5 +1,6 @@
 body {
     background-color: #d2e0fa;
+    margin-top: 0px;
 }
 
 .fld-imerss-pane-info {
@@ -21,11 +22,11 @@ body {
 }
 
 .mxcw-container {
-    height: calc(100vh - 165px);
+    height: calc(100vh - 128px);
 }
 
 .mxcw-content {
-    height: calc(100vh - 140px);
+    height: calc(100vh - 113px);
 }
 
 .mx-header-link {
@@ -37,12 +38,15 @@ body {
     display: flex;
     gap: 6px;
     border-bottom: 4px;
+    margin-top: 4px;
+    padding-bottom: 4px;
 }
 
 .fl-imerss-checklist-outer {
     display: flex;
     flex-direction: column;
     width: 600px;
+    margin-top: -8px; /* No idea why this is necessary */
 }
 
 .fl-imerss-map-and-taxa > * {
@@ -71,13 +75,13 @@ body {
     background-color: #efefe3;
 }
 
-::-webkit-scrollbar {
+body ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 14px;
     background-color: #eee
 }
 
-::-webkit-scrollbar-thumb {
+body ::-webkit-scrollbar-thumb {
     border-radius: 6px;
     background-color: #C1C1C1;
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
@@ -87,8 +91,57 @@ body {
     background-color: #A8A8A8;
 }
 
+body .mx-header ::-webkit-scrollbar {
+    width: 8px;
+}
+
+body .mx-header ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+}
+
 @media screen and ( max-height: 1024px ){
     .fl-imerss-photo {
         height: 200px;
     }
+
+    .mxcw-map {
+        height: 45%;
+        min-height: 45%
+    }
+
+    .mxcw-data {
+        height: 55%;
+    }
+}
+
+/** Port these up into core viz since it is what causes
+scrollbar to appear in taxon panel
+ */
+.fl-imerss-photo {
+    min-width: 0px;
+}
+
+.fl-taxonDisplay-row {
+    min-width: 0px;
+}
+
+/* Port up */
+.fl-imerss-map-and-taxa {
+    margin-right: 0px;
+}
+
+/* Override Xetthecum definition */
+.fl-imerss-container {
+    margin: 0px;
+}
+
+/* Override Howe definition */
+#inat-components > div {
+    padding-top: 0px;
+}
+
+.mxcw-banner {
+    font-size: 24px;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
